Update CMake build scripts so that it includes the newest CppMenu version and it can run its tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,21 @@
 cmake_minimum_required(VERSION 3.14)
 project(Pokedex LANGUAGES CXX)
 
+#set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-add_subdirectory(src)
 
+enable_testing()
 include(FetchContent)
+
+message(STATUS "Fetching the CppMenu library...")
 
 FetchContent_Declare( cppmenu
     GIT_REPOSITORY  https://github.com/DanielRamirez404/CppMenu.git
-    GIT_TAG         v1.0.0
+    GIT_TAG         v2.0.0
     GIT_SHALLOW     TRUE 
 ) 
 
 FetchContent_MakeAvailable(cppmenu)
-target_link_libraries(Pokedex ${CPP_MENU})
+
+add_subdirectory(src)
